refactor: standardize skill naming and argument forwarding